# poller

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  README.txt
examples/http_client/: httpbin.cpp  httpbin.cppm
examples/io/: fileio.cpp  filesystemwatch.cpp
modules/basio/: basio.cpp
modules/container/: container.cpp  list.cpp  tag.cpp
modules/coro/: async_manual_reset_event.cpp  coro.cpp  generator.cpp  pingpong.cpp  task.cpp
modules/io/: async.cpp  event_scheduler.cpp  eventscheduler.cpp  file.cpp  fileio.cpp  fileioscheduler.cpp  filesystemwatch.cpp  filewatch.cpp  interface.cpp  io.cpp  io_context.cpp  list.cpp  payload.cpp  queue.cpp  reader.cpp  scheduler.cpp  schedulerbase.cpp  simple_loop.cpp  timer.cpp  timerscheduler.cpp  writer.cpp
modules/log/: log.cpp
modules/pingpong/: pingpong.cpp
modules/poller/: async.cpp  async.h  debug_func.cpp  handle.cpp  handle.h  interface.cpp  payload.cpp  poller.cpp  poller.h  poller_loop.cpp  poller_loop.h  poller_thread.cpp  request.cpp  request.h  reset_event.cpp  result.cpp  task.cpp  write_func.cpp
modules/raw/: raw.cpp  socket.cpp
modules/server/: server.cpp  simple_server.cpp
modules/std/: array.cpp  list.cpp  queue.cpp  scheduling.cpp  std.cpp  tag.cpp  threadpool.cpp  workstealingdeque.cpp
modules/sync/: sync.cpp  sync.h
test/: CMakeLists.txt
test/assets/: raven.txt
test/callback/: CMakeLists.txt  main.cpp
test/coro/: CMakeLists.txt  async_manual_reset_event.cpp  generator.cpp  main.cpp
test/http_client/: coindesc.cppm  coindesk.cpp  coindesk.cppm  gstatic.cpp  gstatic.cppm  http.cpp  httpbin.cpp  httpbin.cppm  postman.cpp  postman.cppm
test/httpbin/: CMakeLists.txt  httpbin.cpp  httpbin.h  main.cpp
test/io/: CMakeLists.txt  fileio.cpp  io_file.cpp  io_reader.cpp  io_test.cpp  io_timer.cpp  main.cpp  timer.cpp
test/pingpong/: main.cpp
test/poller/: http.cpp
test/raw/: socket.cpp
test/request/: request.cpp
test/server/: CMakeLists.txt  main.cpp
test/socket_client/: .gitignore  settings.gradle.kts
test/socket_client/app/: build.gradle.kts
test/socket_client/app/src/main/client/: Client.kt
test/socket_client/app/src/main/kotlin/client/: Client.kt  Sender.kt
test/uvtcp/: uvtcp.cpp
